# push_client

./: .gitignore  README.md  README_zh.md  build.ps1  installer.iss  pyproject.toml
.github/workflows/: build-release.yml  validate-build-ps1.yml
assets/: help.txt
src/beaverpush/: __init__.py  _version.py  main.py
src/beaverpush/controllers/: __init__.py  app_controller.py  stream_controller.py
src/beaverpush/models/: __init__.py  config.py  stream_model.py
src/beaverpush/services/: __init__.py  autostart_service.py  connectivity_service.py  device_service.py  encoder_probe.py  ffmpeg_path.py  ffmpeg_service.py  hikcamera_capture.py  hikcamera_probe_service.py  log_service.py  single_instance.py  window_capture.py
src/beaverpush/views/: __init__.py  main_window.py  stream_card.py  theme.py
src/push_client/: __init__.py  main.py
src/push_client/controllers/: app_controller.py  stream_controller.py
src/push_client/services/: device_service.py  ffmpeg_path.py  ffmpeg_service.py  log_service.py  window_capture.py
src/push_client/views/: main_window.py  stream_card.py  theme.py
tests/: test_app_controller.py  test_autostart_service.py  test_config.py  test_encoder_probe.py  test_ffmpeg_service.py  test_hikcamera_capture.py  test_log_service.py  test_main.py  test_main_window.py  test_single_instance.py  test_stream_card.py  test_stream_controller.py  test_theme.py  test_version.py  test_window_capture.py
