[project]
name = "push-client"
version = "0.1.0"
description = ""
authors = [
    {name = "alblue",email = "hslixdu@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "pyside6 (>=6.10.2,<7.0.0)",
    "psutil (>=7.2.2,<8.0.0)",
    "loguru (>=0.7.0,<1.0.0)",
    "nuitka (>=4.0.3,<5.0.0)"
]

[tool.poetry]
packages = [{include = "push_client", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
