[project]
name = "beaverpush"
version = "0.1.0"
description = ""
authors = [
    {name = "alblue", email = "hslixdu@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "pyside6>=6.10.2,<7.0.0",
    "psutil>=7.2.2,<8.0.0",
    "loguru>=0.7.0,<1.0.0",
    "nuitka>=4.0.3,<5.0.0",
    "numpy>=1.26.0,<3.0.0",
    "hikcamera",
]

[project.scripts]
beaverpush = "beaverpush.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/beaverpush"]

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.uv.sources]
hikcamera = { url = "https://github.com/doubletry/HiKCamera/releases/download/v2.0.0/hikcamera-2.0.0-py3-none-any.whl" }

[dependency-groups]
dev = [
    "pytest>=9.0.2,<10.0.0",
]
